[gd_scene load_steps=2 format=2]

[ext_resource path="res://SimManager.gd" type="Script" id=1]

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 98.0
margin_right = 294.0
margin_bottom = 600.0
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 196.0
margin_bottom = 279.0
text = "Attacker"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 283.0
margin_right = 196.0
margin_bottom = 335.0
columns = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 118.0
margin_bottom = 19.0
text = "Damage"
valign = 1

[node name="DamageSpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 122.0
margin_right = 196.0
margin_bottom = 24.0
max_value = 100000.0
value = 100.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 118.0
margin_bottom = 47.0
text = "Armor Penetration"
valign = 1

[node name="DamageSpinBox2" type="SpinBox" parent="HBoxContainer/VBoxContainer/GridContainer"]
margin_left = 122.0
margin_top = 28.0
margin_right = 196.0
margin_bottom = 52.0
min_value = -100.0
value = 10.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 412.0
margin_right = 612.0
margin_bottom = 600.0
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_top = 266.0
margin_right = 200.0
margin_bottom = 316.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Attack"

[node name="LastDamage" type="Label" parent="HBoxContainer/VBoxContainer3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 320.0
margin_right = 200.0
margin_bottom = 334.0
text = "-100"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 769.0
margin_right = 887.0
margin_bottom = 600.0
size_flags_horizontal = 6
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 265.0
margin_right = 118.0
margin_bottom = 279.0
text = "Defender"
align = 1
valign = 1

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 283.0
margin_right = 118.0
margin_bottom = 335.0
columns = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
text = "HP"
valign = 1

[node name="DamageSpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_left = 44.0
margin_right = 118.0
margin_bottom = 24.0
max_value = 100000.0
value = 1000.0

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_top = 33.0
margin_right = 40.0
margin_bottom = 47.0
text = "Armor"
valign = 1

[node name="DamageSpinBox2" type="SpinBox" parent="HBoxContainer/VBoxContainer2/GridContainer2"]
margin_left = 44.0
margin_top = 28.0
margin_right = 118.0
margin_bottom = 52.0
min_value = -100.0
value = 25.0
